@@ -34,3 +34,17 @@ if(!all(is.color(col.list)[1:3] & is.na(is.color(col.list)[4]))){
 
 plot(network.initialize(5),vertex.lwd=c(1,2,3,5,10))
 
+# test for expansion of label attribute name bug #785
+# this should produce a plot with vertices labeled A to E, instead
+# used to plot single vertex is labeled with "Label'
+test<-network.initialize(5)
+set.vertex.attribute(test,'Label',LETTERS[1:5])
+plot(test,label='Label')
+
+# replicates non-matching label name
+plot(test,label='A')
+plot(test,label=1)
+
+# should error if all values are missing
+#set.vertex.attribute(test,'bad',NA,v=1:3)
+#plot(test,label='bad')
